<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.SettingsFragment">

   <TextView
       android:id="@+id/chooseLanguageTV"
       android:text="@string/chooseLanguage"
       android:layout_marginStart="20dp"
       android:fontFamily="@font/ralewayb"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       android:textSize="15sp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/languageRadioGroup"
        app:layout_constraintTop_toBottomOf="@id/chooseLanguageTV"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/chooseLanguageTV"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/eng"
            android:text="@string/hrvLang"
            android:id="@+id/hrv"
            android:fontFamily="@font/ralewayr"
            />

        <RadioButton
            android:id="@+id/eng"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ralewayr"
            android:text="@string/engLang"
            app:layout_constraintLeft_toRightOf="@id/hrv"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chooseLanguageTV" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>